--- a/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj.filters
+++ b/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj.filters
@@ -16,5 +16,6 @@
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl" />
     <FxCompile Include="VertexShader.hlsl" />
+    <FxCompile Include="GeometryShader.hlsl" />
   </ItemGroup>
 </Project>
