--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="XmlParseHelperBeginPlay.h">
       <Filter>XmlParseHelpers</Filter>
     </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Kernel\Input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -277,6 +280,9 @@
     <ClCompile Include="XmlParseHelperBeginPlay.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
+    <ClCompile Include="InputManager.cpp">
+      <Filter>Kernel\Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
@@ -326,6 +332,9 @@
     </Filter>
     <Filter Include="Kernel\Graphic">
       <UniqueIdentifier>{a512568e-1bf5-4b59-8364-517228890d86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Input">
+      <UniqueIdentifier>{08106fa5-abc1-4ee8-9460-7529cdd61ead}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
