--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -1,406 +1,136 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="RTTI.h" />
-    <ClInclude Include="Vector.h">
-      <Filter>Containers</Filter>
-    </ClInclude>
-    <ClInclude Include="Stack.h">
-      <Filter>Containers</Filter>
-    </ClInclude>
-    <ClInclude Include="SList.h">
-      <Filter>Containers</Filter>
-    </ClInclude>
-    <ClInclude Include="Hashmap.h">
-      <Filter>Containers</Filter>
-    </ClInclude>
-    <ClInclude Include="IXmlParseHelper.h" />
-    <ClInclude Include="XmlParseMaster.h" />
-    <ClInclude Include="Factory.h" />
-    <ClInclude Include="XmlParseHelperTable.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperPrimitives.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperNameValue.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperWorld.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperSector.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperEntity.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperAction.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Datum.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="Attributed.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="Action.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="Scope.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="Sector.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="World.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="WorldState.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionList.h">
-      <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="Graph.h">
-      <Filter>Containers</Filter>
-    </ClInclude>
-    <ClInclude Include="Game.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="GameClock.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="GameTime.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="SharedDataTable.h">
-      <Filter>Game</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionListSwitch.h">
-      <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperActionSwitch.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="DefaultReserveStrategy.h">
-      <Filter>Containers\DefaultAlgos</Filter>
-    </ClInclude>
-    <ClInclude Include="DefaultHash.h">
-      <Filter>Containers\DefaultAlgos</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperActionExpression.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionExpression.h">
-      <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="IEventSubscriber.h">
-      <Filter>Kernel\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="EventPublisher.h">
-      <Filter>Kernel\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="Event.h">
-      <Filter>Kernel\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="EventQueue.h">
-      <Filter>Kernel\Event</Filter>
-    </ClInclude>
-    <ClInclude Include="Reaction.h">
-      <Filter>Kernel\Reaction</Filter>
-    </ClInclude>
-    <ClInclude Include="ReactionAttributed.h">
-      <Filter>Kernel\Reaction</Filter>
-    </ClInclude>
-    <ClInclude Include="EventMessageAttributed.h">
-      <Filter>Kernel\Reaction</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionEvent.h">
-      <Filter>Kernel\Reaction</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperReaction.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperActionEvent.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionIfThenElse.h">
-      <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperActionIf.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="ActionWhileLoop.h">
-      <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperActionWhile.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Sprite.h">
-      <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperSprite.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderable.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderDevice.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="Viewport.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenGLRenderDevice.h">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClInclude>
-    <ClInclude Include="XmlParseHelperBeginPlay.h">
-      <Filter>XmlParseHelpers</Filter>
-    </ClInclude>
-    <ClInclude Include="InputManager.h">
-      <Filter>Kernel\Input</Filter>
-    <ClInclude Include="RenderBuffer.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="Shader.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenGLRenderBuffer.h">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenGLShader.h">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenGLTexture.h">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
+    <ClCompile Include="..\Game.Desktop.OpenGL\gl3w.c" />
+    <ClCompile Include="Action.cpp" />
+    <ClCompile Include="ActionEvent.cpp" />
+    <ClCompile Include="ActionExpression.cpp" />
+    <ClCompile Include="ActionIfThenElse.cpp" />
+    <ClCompile Include="ActionList.cpp" />
+    <ClCompile Include="ActionListSwitch.cpp" />
+    <ClCompile Include="ActionWhileLoop.cpp" />
+    <ClCompile Include="Attributed.cpp" />
+    <ClCompile Include="Datum.cpp" />
+    <ClCompile Include="DefaultHash.cpp" />
+    <ClCompile Include="DefaultReserveStrategy.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="EventMessageAttributed.cpp" />
+    <ClCompile Include="EventPublisher.cpp" />
+    <ClCompile Include="EventQueue.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameClock.cpp" />
+    <ClCompile Include="GameTime.cpp" />
+    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="OpenGLRenderBuffer.cpp" />
+    <ClCompile Include="OpenGLRenderDevice.cpp" />
+    <ClCompile Include="OpenGLShader.cpp" />
+    <ClCompile Include="OpenGLTexture.cpp" />
+    <ClCompile Include="RenderBuffer.cpp" />
+    <ClCompile Include="RenderDevice.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="Reaction.cpp" />
+    <ClCompile Include="ReactionAttributed.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Scope.cpp" />
+    <ClCompile Include="Sector.cpp" />
+    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="SharedDataTable.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Viewport.cpp" />
+    <ClCompile Include="World.cpp" />
+    <ClCompile Include="WorldState.cpp" />
+    <ClCompile Include="XmlParseHelperAction.cpp" />
+    <ClCompile Include="XmlParseHelperActionEvent.cpp" />
+    <ClCompile Include="XmlParseHelperActionExpression.cpp" />
+    <ClCompile Include="XmlParseHelperActionIf.cpp" />
+    <ClCompile Include="XmlParseHelperActionSwitch.cpp" />
+    <ClCompile Include="XmlParseHelperActionWhile.cpp" />
+    <ClCompile Include="XmlParseHelperBeginPlay.cpp" />
+    <ClCompile Include="XmlParseHelperEntity.cpp" />
+    <ClCompile Include="XmlParseHelperNameValue.cpp" />
+    <ClCompile Include="XmlParseHelperPrimitives.cpp" />
+    <ClCompile Include="XmlParseHelperReaction.cpp" />
+    <ClCompile Include="XmlParseHelperSector.cpp" />
+    <ClCompile Include="XmlParseHelperSprite.cpp" />
+    <ClCompile Include="XmlParseHelperWorld.cpp" />
     <ClCompile Include="XmlParseMaster.cpp" />
-    <ClCompile Include="XmlParseHelperTable.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperPrimitives.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperNameValue.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperWorld.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperSector.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperEntity.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperAction.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Datum.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="Attributed.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="Action.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="Scope.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="Sector.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="World.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="WorldState.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionList.cpp">
-      <Filter>Kernel\Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="GameClock.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="GameTime.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="SharedDataTable.cpp">
-      <Filter>Game</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionListSwitch.cpp">
-      <Filter>Kernel\Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperActionSwitch.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="DefaultHash.cpp">
-      <Filter>Containers\DefaultAlgos</Filter>
-    </ClCompile>
-    <ClCompile Include="DefaultReserveStrategy.cpp">
-      <Filter>Containers\DefaultAlgos</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperActionExpression.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionExpression.cpp">
-      <Filter>Kernel\Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="EventPublisher.cpp">
-      <Filter>Kernel\Event</Filter>
-    </ClCompile>
-    <ClCompile Include="EventQueue.cpp">
-      <Filter>Kernel\Event</Filter>
-    </ClCompile>
-    <ClCompile Include="Reaction.cpp">
-      <Filter>Kernel\Reaction</Filter>
-    </ClCompile>
-    <ClCompile Include="ReactionAttributed.cpp">
-      <Filter>Kernel\Reaction</Filter>
-    </ClCompile>
-    <ClCompile Include="EventMessageAttributed.cpp">
-      <Filter>Kernel\Reaction</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionEvent.cpp">
-      <Filter>Kernel\Reaction</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperReaction.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperActionEvent.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionIfThenElse.cpp">
-      <Filter>Kernel\Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperActionIf.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="ActionWhileLoop.cpp">
-      <Filter>Kernel\Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperActionWhile.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Sprite.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperSprite.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Renderer.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderDevice.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Viewport.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Game.Desktop.OpenGL\gl3w.c">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClCompile>
-    <ClCompile Include="OpenGLRenderDevice.cpp">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClCompile>
-    <ClCompile Include="XmlParseHelperBeginPlay.cpp">
-      <Filter>XmlParseHelpers</Filter>
-    </ClCompile>
-    <ClCompile Include="InputManager.cpp">
-      <Filter>Kernel\Input</Filter>
-    <ClCompile Include="RenderBuffer.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Shader.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="OpenGLShader.cpp">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClCompile>
-    <ClCompile Include="OpenGLTexture.cpp">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClCompile>
-    <ClCompile Include="OpenGLRenderBuffer.cpp">
-      <Filter>Kernel\Graphic\opengl</Filter>
-    </ClCompile>
+    <ClCompile Include="XmlParseHelperTable.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Vector.inl">
-      <Filter>Containers</Filter>
-    </None>
-    <None Include="Stack.inl">
-      <Filter>Containers</Filter>
-    </None>
-    <None Include="SList.inl">
-      <Filter>Containers</Filter>
-    </None>
-    <None Include="Hashmap.inl">
-      <Filter>Containers</Filter>
-    </None>
+    <ClInclude Include="Action.h" />
+    <ClInclude Include="ActionEvent.h" />
+    <ClInclude Include="ActionExpression.h" />
+    <ClInclude Include="ActionIfThenElse.h" />
+    <ClInclude Include="ActionList.h" />
+    <ClInclude Include="ActionListSwitch.h" />
+    <ClInclude Include="ActionWhileLoop.h" />
+    <ClInclude Include="Attributed.h" />
+    <ClInclude Include="Datum.h" />
+    <ClInclude Include="DefaultHash.h" />
+    <ClInclude Include="DefaultReserveStrategy.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="EventMessageAttributed.h" />
+    <ClInclude Include="EventPublisher.h" />
+    <ClInclude Include="EventQueue.h" />
+    <ClInclude Include="Factory.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameClock.h" />
+    <ClInclude Include="GameTime.h" />
+    <ClInclude Include="Graph.h" />
+    <ClInclude Include="Hashmap.h" />
+    <ClInclude Include="IEventSubscriber.h" />
+    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="OpenGLRenderBuffer.h" />
+    <ClInclude Include="OpenGLRenderDevice.h" />
+    <ClInclude Include="OpenGLShader.h" />
+    <ClInclude Include="OpenGLTexture.h" />
+    <ClInclude Include="Renderable.h" />
+    <ClInclude Include="RenderBuffer.h" />
+    <ClInclude Include="RenderDevice.h" />
+    <ClInclude Include="IXmlParseHelper.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="Reaction.h" />
+    <ClInclude Include="ReactionAttributed.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="RTTI.h" />
+    <ClInclude Include="Scope.h" />
+    <ClInclude Include="Sector.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="SharedDataTable.h" />
+    <ClInclude Include="SList.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Stack.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Vector.h" />
+    <ClInclude Include="Viewport.h" />
+    <ClInclude Include="World.h" />
+    <ClInclude Include="WorldState.h" />
+    <ClInclude Include="XmlParseHelperAction.h" />
+    <ClInclude Include="XmlParseHelperActionEvent.h" />
+    <ClInclude Include="XmlParseHelperActionExpression.h" />
+    <ClInclude Include="XmlParseHelperActionIf.h" />
+    <ClInclude Include="XmlParseHelperActionSwitch.h" />
+    <ClInclude Include="XmlParseHelperActionWhile.h" />
+    <ClInclude Include="XmlParseHelperBeginPlay.h" />
+    <ClInclude Include="XmlParseHelperEntity.h" />
+    <ClInclude Include="XmlParseHelperNameValue.h" />
+    <ClInclude Include="XmlParseHelperPrimitives.h" />
+    <ClInclude Include="XmlParseHelperReaction.h" />
+    <ClInclude Include="XmlParseHelperSector.h" />
+    <ClInclude Include="XmlParseHelperSprite.h" />
+    <ClInclude Include="XmlParseHelperWorld.h" />
+    <ClInclude Include="XmlParseMaster.h" />
+    <ClInclude Include="XmlParseHelperTable.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Event.inl" />
     <None Include="Factory.inl" />
-    <None Include="Graph.inl">
-      <Filter>Containers</Filter>
-    </None>
-    <None Include="Event.inl">
-      <Filter>Kernel\Event</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Containers">
-      <UniqueIdentifier>{9200d2f2-c985-4c30-b54a-2eed345be36e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="XmlParseHelpers">
-      <UniqueIdentifier>{5a96a001-e4a9-4694-9437-8c9cc16c73c2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel">
-      <UniqueIdentifier>{2033ed55-8f3b-4ec8-bb52-925fe9fb8498}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel\Actions">
-      <UniqueIdentifier>{4a675d0f-1bc5-41bd-b87b-7d54457da1e0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Game">
-      <UniqueIdentifier>{1a8892a5-8c0e-4ec2-9d05-78b2304d8d38}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Containers\DefaultAlgos">
-      <UniqueIdentifier>{12cdb7e0-222a-48dc-a856-d8af539b5712}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel\Reaction">
-      <UniqueIdentifier>{b81e4602-a96f-4506-9204-cf8ee103b9f4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel\Event">
-      <UniqueIdentifier>{1701d7bb-f296-4604-b3f4-681d9c373f7f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel\Graphic">
-      <UniqueIdentifier>{a512568e-1bf5-4b59-8364-517228890d86}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Kernel\Input">
-      <UniqueIdentifier>{08106fa5-abc1-4ee8-9460-7529cdd61ead}</UniqueIdentifier>
-    <Filter Include="Kernel\Graphic\opengl">
-      <UniqueIdentifier>{b7662a6a-e35e-4827-bc80-8e5550aff84c}</UniqueIdentifier>
-    </Filter>
+    <None Include="Graph.inl" />
+    <None Include="Hashmap.inl" />
+    <None Include="SList.inl" />
+    <None Include="Stack.inl" />
+    <None Include="Vector.inl" />
   </ItemGroup>
 </Project>
