created a separate macro for RTTI_DEFINITIONS of template types - RTTI_DEFINITIONS_T added Graph traversors as static member variabs of RTTI and its derived types

--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -355,6 +355,7 @@
     <ClCompile Include="ActionDestroyEntity.cpp">
       <Filter>Kernel\Actions</Filter>
     </ClCompile>
+    <ClCompile Include="RTTI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
